# fixed25

./: CMakeLists.txt  fixed.h  fixedtests.cpp  mainprogram.cpp
